``` feat(domain): implement rich domain model and fix infrastructure layer
Apply Days 1-6 concepts to FinTrack domain and fix all compilation errors
caused by the API changes between the original and new domain models.

=== DOMAIN MODEL ===

Transaction.java — converted to Java Record (immutable by design)
- Compact constructor validates all fields: null checks, positive amount,
  non-blank description, category defaults to "Uncategorized"
- Factory methods: createDebit(), createCredit(), createPending()
- Pure predicates for Stream use (Day 5): isDebit(), isCompleted(),
  belongsTo(YearMonth) — stateless, no side effects, ideal for .filter()
- complete() and fail() return new instances — immutability without setters

Account.java — rich aggregate root
- final class: not designed for extension (Effective Java Item 17)
- Private constructors + factory methods: create(), createWithBalance(),
  reconstitute() — each with clear semantic intent (Item 1)
- Bug fix: added second private constructor for reconstitute() that accepts
  createdAt explicitly — previous version overwrote bank value with now()
  (createdAt is final, cannot be reassigned after construction)
- synchronized debit() and credit(): thread-safe atomic balance operations
  (Day 4 — note: TODO replace with ReentrantLock for Virtual Thread pinning)
- rename(): name field changed from final to mutable with synchronized access
- Stream analytics (Day 5): lazy filter ordering, short-circuit anyMatch and
  findFirst in hasHighRiskTransaction() and findFirstSuspiciousTransaction()
- Collectors (Day 6): groupingBy + reducing in getSpendingByCategory(),
  Collectors.teeing() in getMonthlyReport() — two results in one loop
- equals/hashCode based on UUID only — balance excluded to preserve
  Set/HashMap semantics after debit/credit mutations

MonthlyAccountSummary.java — new Record for getMonthlyReport() result
DomainException, InsufficientBalanceException, InvalidAmountException —
  RuntimeException hierarchy: dom